Final changes to visual assets ahead of App Store submission.

--- a/Cycle Atlanta-Info.plist
+++ b/Cycle Atlanta-Info.plist
@@ -32,7 +32,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>CAGT</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -44,7 +44,7 @@
 		<string>location</string>
 	</array>
 	<key>UIPrerenderedIcon</key>
-	<string>YES</string>
+	<string>NO</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>location-services</string>
