--- a/Cycle Atlanta-Info.plist
+++ b/Cycle Atlanta-Info.plist
@@ -21,6 +21,8 @@
 				<string>appIcon@2x.png</string>
 				<string>Default@2x.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -43,6 +45,8 @@
 	<array>
 		<string>location</string>
 	</array>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>location-services</string>
