--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -26,7 +26,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>edu.gatech.ppl.cycleatlanta</string>
+	<string>org.codeforphilly.cycle</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
