--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -31,7 +31,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.CodeforPhilly.CyclePhilly</string>
+	<string>com.CodeforPhilly.Cycle</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
