--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -11,25 +11,9 @@
 	<key>CFBundleIconFile</key>
 	<string>appIcon.png</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>appIcon@Retina</string>
-				<string>appIcon58x58</string>
-				<string>appIcon29x29</string>
-				<string>appretina</string>
-				<string>appicon57x57</string>
-				<string>appIcon.png</string>
-				<string>Default.png</string>
-				<string>appIcon@2x.png</string>
-				<string>Default@2x.png</string>
-			</array>
-			<key>UIPrerenderedIcon</key>
-			<true/>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>com.CodeforPhilly.Cycle</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -39,11 +23,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1</string>
+	<string>1.2</string>
 	<key>CFBundleSignature</key>
 	<string>CAGT</string>
 	<key>CFBundleVersion</key>
-	<string>111</string>
+	<string>113</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
