--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -45,6 +45,7 @@
 	<string>MainWindow</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
 	</array>
 	<key>UIPrerenderedIcon</key>
