Fixed background refresh setting and updated indego api url.

--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -36,6 +36,7 @@
 	<string>MainWindow</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
 	</array>
 	<key>UIPrerenderedIcon</key>
