Fixed background tracking on iOS with @flibbertigibbet, nixed all upload errors and unreliable indicators.  Commented out a portion of the code that seemed to be trying to take a screenshot.

--- a/Cycle Philly-Info.plist
+++ b/Cycle Philly-Info.plist
@@ -31,7 +31,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
+	<string>We need your location to track your routes. </string>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 	<key>UIBackgroundModes</key>
